<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CalendarFragment"
    android:orientation="vertical">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            >
            <TableRow>
                <Button
                    android:id="@+id/totsBTN"
                    android:layout_width="wrap_content"
                    android:text="@string/tots"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/amicsBTN"
                    android:layout_width="wrap_content"
                    android:text="@string/amics"
                    android:textSize="16sp"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_weight="1"
                    />

                <Button
                    android:id="@+id/asistireBTN"
                    android:layout_width="wrap_content"
                    android:text="@string/assistire"
                    android:textSize="16sp"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_weight="1" />
            </TableRow>
            <TextView
                android:id="@+id/filtresTV"
                android:layout_marginTop="10sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:background="@color/grey2"
                android:textSize="20sp"
                android:text="@string/filter_sample"
                />
        </TableLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerMogudes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"/>
</LinearLayout>